# mlql

./: .env.example  .gitignore  .gitmodules  BUILD_DUCKDB.md  CLAUDE.md  CURRENT_MCP_FLOW.md  Cargo.toml  Cargo.toml.old  IR_TO_SUBSTRAIT_TODO.md  LICENSE  MCP_SUBSTRAIT_TODO.md  PROGRESS.md  README.md  RUN_SUBSTRAIT_SERVER.md  SUBSTRAIT_EXECUTION_DESIGN.md  SUBSTRAIT_STATUS.md  TODO.md  TODO_SQL_SCHEMA_TRACKING.md  WEAKNESSES_TODO.md  config.yaml  run_server.sh  test_openai.sh  test_substrait_server.sh
.cargo/: config.toml  config.toml.bak
crates/mlql-ast/: Cargo.toml
crates/mlql-ast/examples/: debug_parse.rs
crates/mlql-ast/src/: ast.rs  lib.rs  mlql.pest  parser.rs  to_ir.rs
crates/mlql-duck/: Cargo.toml
crates/mlql-duck/src/: lib.rs
crates/mlql-ir/: Cargo.toml
crates/mlql-ir/src/: lib.rs  types.rs
crates/mlql-ir/src/substrait/: mod.rs  schema.rs  translator.rs
crates/mlql-ir/tests/: duckdb_custom.rs  duckdb_execution.rs  substrait_operators.rs
crates/mlql-registry/: Cargo.toml
crates/mlql-registry/src/: lib.rs
crates/mlql-server/: Cargo.toml  README.md
crates/mlql-server/src/: catalog.rs  config.rs  llm.rs  logging.rs  main.rs  mcp.rs  query.rs
crates/mlql-substrait/: Cargo.toml  build.rs
crates/mlql-substrait/src/: lib.rs
docs/: claude-desktop-setup.md  llm-json-format.md  server-quickstart.md
examples/: run_pipeline.rs  simple_select.rs
logs/: mlql-server.log.2025-10-10
npm-package/: package.json
src/: lib.rs
src/catalog/: mod.rs
src/compile/: mod.rs
src/exec/: mod.rs
src/functions/: mod.rs
src/ir/: mod.rs
src/parser/: mod.rs
src/policy/: mod.rs
src/server/: mod.rs
src/validate/: mod.rs
