[package]
name = "mlql-duck"
version.workspace = true
edition.workspace = true

[dependencies]
mlql-ir = { path = "../mlql-ir" }
duckdb.workspace = true
arrow.workspace = true
thiserror.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
mlql-ast = { path = "../mlql-ast" }
