[package]
name = "mlql-substrait"
version.workspace = true
edition.workspace = true

[dependencies]
mlql-ir = { path = "../mlql-ir" }
mlql-registry = { path = "../mlql-registry" }
prost.workspace = true
prost-types.workspace = true
prost-reflect.workspace = true
thiserror.workspace = true
serde_json.workspace = true

[build-dependencies]
prost-build = "0.14"
prost-reflect-build = "0.16"
